tests/fixtures/invalid/float_none.py
# Cannot call float() with None
x = float(None)
